Fix issue with comparison overlapping navigation

--- a/src/app/components/navigation-bar/navigation-bar.component.css
+++ b/src/app/components/navigation-bar/navigation-bar.component.css
@@ -5,6 +5,7 @@
   display: flex;
   position: sticky;
   top: 0;
+  z-index: 10;
 }
 
 :host::before {
